# LearningAndroidOpenCV

./: README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  (+1 more)
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/opencv2/: calib3d.hpp  core.hpp  features2d.hpp  flann.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  objdetect.hpp  stitching.hpp  videoio.hpp  wechat_qrcode.hpp
app/src/main/cpp/include/opencv2/core/: async.hpp  base.hpp  bindings_utils.hpp  check.hpp  core_c.h  cuda.hpp  cuda.inl.hpp  cv_cpu_dispatch.h  cvdef.h  cvstd.inl.hpp  cvstd_wrapper.hpp  dualquaternion.hpp  dualquaternion.inl.hpp  fast_math.hpp  mat.hpp  mat.inl.hpp  matx.hpp  ocl.hpp  operations.hpp  optim.hpp  persistence.hpp  quaternion.hpp  quaternion.inl.hpp  saturate.hpp  types.hpp  types_c.h  utility.hpp  vsx_utils.hpp
app/src/main/cpp/include/opencv2/dnn/: all_layers.hpp  dict.hpp  dnn.hpp  dnn.inl.hpp  layer.hpp  shape_utils.hpp  version.hpp
app/src/main/cpp/include/opencv2/flann/: any.h  dist.h  heap.h  hierarchical_clustering_index.h  index_testing.h  kdtree_index.h  kmeans_index.h  lsh_index.h  nn_index.h
app/src/main/cpp/include/opencv2/gapi/: core.hpp  garg.hpp  garray.hpp  gasync_context.hpp  gcommon.hpp  gcomputation.hpp  gframe.hpp  gkernel.hpp  gmat.hpp  gopaque.hpp  gproto.hpp  gscalar.hpp  gstreaming.hpp  gtransform.hpp  gtype_traits.hpp  gtyped.hpp  imgproc.hpp  infer.hpp  media.hpp  opencv_includes.hpp  rmat.hpp  s11n.hpp  stereo.hpp  video.hpp
app/src/main/cpp/include/opencv2/highgui/: highgui_c.h
app/src/main/cpp/include/opencv2/imgproc/: segmentation.hpp
app/src/main/cpp/include/opencv2/video/: tracking.hpp
app/src/main/cpp/wechat/: binarizermgr.cpp  binarizermgr.hpp  decodermgr.cpp  decodermgr.hpp  imgsource.cpp  imgsource.hpp  precomp.hpp  wechat_qrcode.cpp
app/src/main/cpp/wechat/detector/: align.cpp  align.hpp  ssd_detector.cpp  ssd_detector.hpp
app/src/main/cpp/wechat/scale/: super_scale.cpp  super_scale.hpp
app/src/main/cpp/wechat/zxing/: binarizer.cpp  binarizer.hpp  binarybitmap.cpp  binarybitmap.hpp  decodehints.hpp  errorhandler.cpp  errorhandler.hpp  luminance_source.cpp  luminance_source.hpp  reader.cpp  reader.hpp  result.cpp  result.hpp  resultpoint.cpp  resultpoint.hpp  zxing.hpp
app/src/main/cpp/wechat/zxing/common/: array.hpp  bitarray.cpp  bitarray.hpp  bitmatrix.cpp  bitmatrix.hpp  bitsource.cpp  bitsource.hpp  bytematrix.cpp  bytematrix.hpp  characterseteci.cpp  characterseteci.hpp  counted.hpp  decoder_result.cpp  decoder_result.hpp  detector_result.cpp  detector_result.hpp  greyscale_luminance_source.cpp  greyscale_luminance_source.hpp  greyscale_rotated_luminance_source.cpp  greyscale_rotated_luminance_source.hpp  grid_sampler.cpp  grid_sampler.hpp  imagecut.cpp  imagecut.hpp  kmeans.cpp  kmeans.hpp  mathutils.hpp  perspective_transform.cpp  perspective_transform.hpp  str.cpp  str.hpp  stringutils.cpp  stringutils.hpp  unicomblock.cpp  unicomblock.hpp
(+179 files in other folders)
